--- a/components/Comment.pug
+++ b/components/Comment.pug
@@ -2,12 +2,12 @@ script.
 	import Flair from './Flair.pug'
 	import Score from './Score.pug'
 	export comment = {}
-	export statistics = null
+	export scoreRange = [0, 0]
 
 .comment-tree
 	.comment
 		header
-			Score(score={comment.score} range={statistics.scoreRange} editDate={comment.editDate})
+			Score(score={comment.score} range={scoreRange} editDate={comment.editDate})
 			a.author(href='/u/{comment.authorName}') {comment.authorName}
 			Flair(flair={comment.authorFlair} subredditName={comment.subredditName})
 		.body
@@ -15,7 +15,7 @@ script.
 	{#if comment.replies.length}
 		.replies
 			{#each comment.replies as reply}
-				svelte:self(comment={reply} statistics={statistics})
+				svelte:self(comment={reply} scoreRange={scoreRange})
 
 
 style.
