--- a/components/Feed.pug
+++ b/components/Feed.pug
@@ -1,9 +1,15 @@
 script.
+	import CommentModel from '../models/Comment.coffee'
+	import PostModel from '../models/Post.coffee'
+	import Comment from '../components/Comment.pug'
+	import Post from '../components/Post.pug'
+	import SubredditTag from '../components/SubredditTag.pug'
 	export channelType = 'frontpage'
 	export items = []
+	export selection = null
 	scoreRange = [0, 0]
 	computeStats = (items) =>
-		for items in items
+		for item in items
 			if item.score < scoreRange[0]
 				scoreRange[0] = item.score
 			else if item.score > scoreRange[1]
@@ -16,9 +22,9 @@ ol
 			{#if channelType !== 'subreddit'}
 				SubredditTag(subreddit={item.subreddit})
 			{#if item instanceof PostModel}
-				Post(post={item} scoreRange={scoreRange} selected={item === state.selection})
+				Post(post={item} scoreRange={scoreRange} selected={item === selection})
 			{#if item instanceof CommentModel}
-				Comment(comment={item} scoreRange={scoreRange} selected={item === state.selection})
+				Comment(comment={item} scoreRange={scoreRange} selected={item === selection})
 
 style.
 	ol
