--- a/components/Flair.pug
+++ b/components/Flair.pug
@@ -3,8 +3,8 @@ script.
 	export subredditName = ''
 	emojis = {}
 	html = flair.text
-	if LS['emojis@' + subredditName]
-		for emoji in LS['emojis@' + subredditName].split(',')
+	if Storage['emojis@' + subredditName]
+		for emoji in Storage['emojis@' + subredditName].split(',')
 			[code, id] = emoji.split(':')
 			emojis[code] = id
 		html =
