--- a/components/CommentSection.pug
+++ b/components/CommentSection.pug
@@ -1,4 +1,5 @@
 script.
+	import { afterUpdate } from 'svelte'
 	import { bubbleEvent } from '../scripts/dom/events.coffee'
 	import { setScroll } from '../scripts/dom/useActions.coffee'
 	import Comment from './Comment.pug'
@@ -16,22 +17,36 @@ script.
 					scoreRange[1] = comment.score
 				computeStats(comment.replies)
 	computeStats(comments)
+	commentsContainer = null
+	minimapCanvas = null
+	minimapH = comments.length * 8 # TODO
+	minimapW = 24
+	drawMinimap = (target) =>
+		ctx = minimapCanvas.getContext('2d')
+		ctx.clearRect(0, 0, minimapW, minimapH)
+		ctx.fillStyle = 'rgba(0, 0, 0, 0.5)'
+		ctx.fillRect(10, 0, 4, minimapH)
+		scrollFrac = (target.scrollTop or restoredScroll or 0) / target.scrollHeight
+		pointerTop = Math.floor(scrollFrac * minimapH)
+		ctx.fillRect(0, pointerTop, minimapW, Math.floor(minimapH * target.clientHeight / target.scrollHeight))
+	afterUpdate(=> drawMinimap(commentsContainer))
+	onScroll = (e) =>
+		drawMinimap(commentsContainer)
+		bubbleEvent(e)
 
-section.scroll-tall.no-scrollbar#comments(on:scroll={bubbleEvent} use:setScroll={restoredScroll} data-post-id={postId})
+section.scroll-tall.no-scrollbar#comments(bind:this={commentsContainer} on:scroll={onScroll} use:setScroll={restoredScroll} data-post-id={postId})
 	{#each comments as comment}
 		Comment(comment={comment} scoreRange={scoreRange} votes={votes})
-	.minimap
+	canvas.minimap(bind:this={minimapCanvas} width={minimapW} height={minimapH})
 
 style.
 	section
 		position relative
 		display flex
 		flex-flow column nowrap
-		padding-right 160px
+		padding-right 80px
 		background inherit
 	.minimap
-		position absolute
+		position fixed
 		top 0
-		right 0
-		height 100vh
-		width 80px
+		right 8px
