design: improve text styling

--- a/components/Post.pug
+++ b/components/Post.pug
@@ -67,12 +67,11 @@ style.
 		gap 1ch
 		font 12px 'Iosevka Aile Web'
 	.title
-		font bold 18px Karla
+		font bold 1.666em/1.333 var(--font-face)
 	.sticky-tag
 		background green
 		color white
 	.content
-		margin 20px 0
 		a
 			display block
 			padding 0.5em
