--- a/styles/base.styl
+++ b/styles/base.styl
@@ -1,36 +1,16 @@
-*
-	box-sizing border-box
 html
-	font-size 25% // 1rem = 4px
-body
-	margin 0
-	height 100vh
-	font 400 15px/1.6 'Arial'
-	letter-spacing 0.02em
-	font-feature-settings 'kern'
-	-webkit-font-smoothing antialiased
-	-moz-osx-font-smoothing grayscale
+	font 400 14px/1.5 var(--font-face)
+	letter-spacing 0.01em
+	word-spacing 0.05em
 a
 	color inherit
-	text-decoration none
-button
-	padding 0
-	border 0
-	font inherit
-	cursor pointer
-h1, h2, h3, h4, h5, h6
-	margin 0
-figure,
-menu,
-ol, ul
-	margin 0
-	padding 0
-ol, ul
-	list-style none
-p
-	margin 0
-iframe
-	display block
-	border 0
-img
-	display block
+h1
+h2
+h3
+h4
+h5
+h6
+	line-height 1.333
+code
+pre
+	font-family var(--font-face-mono)
