--- a/styles/md.styl
+++ b/styles/md.styl
@@ -1,8 +1,13 @@
 .md
 	word-break break-word
-	
-	& > * + *
-		margin 0.5em 0 0 0
+
+	// Paragraphs
+	p
+		margin-top 1em
+	p:first-child
+		margin-top 0
+	blockquote + p
+		margin-top 0.5em
 
 	// Headers
 	h1, h2, h3, h4, h5, h6
@@ -19,17 +24,21 @@
 		list-style decimal
 		padding-left 16px
 	ul
-		list-style circle
+		list-style disc
 		padding-left 16px
+	li
+		margin-top 0.5em
 
 	// Tables
 	table
+		margin-top 1em
 		display inline-block
 		max-width 100%
-		padding-bottom 1em
 		overflow auto
 		white-space pre
 		font 12px var(--font-face-mono)
+	table:first-child
+		margin-top 0
 	thead
 		border-bottom 1px solid
 	td
@@ -43,24 +52,25 @@
 
 	// Verbatim text
 	blockquote
-		margin 0
+		margin-top 1em
 		padding 0.5em 1em
 		background rgba(0,0,0,0.1)
 		color gray
-		& > * + *
-			margin 0.5em 0 0 0
+	blockquote:first-child
+		margin-top 0
 	code
 		padding 0.25em 0.5em
 		white-space pre
 		background gainsboro
 		font-size 12px
 	pre
-		margin 0
+		margin-top 1em
 		display inline-block
 		white-space pre
 		overflow auto
-		padding 0.5em 1em
-		background gainsboro
+		padding 0.5em 0
+	pre:first-child
+		margin-top 0
 
 	// Spoilers
 	.md-spoiler-text
