--- a/styles/vars.styl
+++ b/styles/vars.styl
@@ -1,3 +1,3 @@
 html
-	--font-face 'Fira Sans', 'FiraGO', sans-serif
+	--font-face 'FiraGO', sans-serif
 	--font-face-mono 'Fira Mono', Consolas, Monaco, monospace
