--- a/styles/base.styl
+++ b/styles/base.styl
@@ -1,9 +1,17 @@
+// Text
 html
-	font 400 14px/1.2875 var(--font-face)
+	font 400 10pt/1.5 var(--font-face)
 	letter-spacing 0.03em
 	word-spacing 0.03em
+strong
+	letter-spacing 0
+	word-spacing 0
+
+// Links
 a
 	color inherit
+
+// Verbatim text
 code
 pre
 	font-family var(--font-face-mono)
