--- a/styles/util.styl
+++ b/styles/util.styl
@@ -8,8 +8,9 @@
 	background salmon
 	color white
 .upvoted
+	color orangered
 .downvoted
-	opacity 0.5
+	color lightsteelblue
 
 // Overflow
 .scroll-tall
