--- a/styles/md.styl
+++ b/styles/md.styl
@@ -8,16 +8,16 @@
 		margin-top 0
 	blockquote + p
 		margin-top 0.5em
+	hr
+		margin-top 1em
+		border 0
+		height 1px
+		background rgba(0,0,0,0.5)
 
 	// Headers
 	h1, h2, h3, h4, h5, h6
-		font-size inherit
-		font-weight bold
-		text-transform uppercase
-		margin 1em 0
-	hr
-		margin-top 1em
-		width 2em
+		font-weight normal
+		font-size 1.25em
 
 	// Lists
 	ol
@@ -26,8 +26,6 @@
 	ul
 		list-style disc
 		padding-left 16px
-	li
-		margin-top 0.5em
 
 	// Tables
 	table
@@ -36,26 +34,24 @@
 		max-width 100%
 		overflow auto
 		white-space pre
-		font 12px var(--font-face-mono)
 	table:first-child
 		margin-top 0
 	thead
 		border-bottom 1px solid
 	td
 	th
-		padding 0.25em 0
 		border-right 2em solid transparent
 		&:last-child
 			border-right 0
 	tr:first-child td
-		padding-top 1.25em
+		padding-top 0.5em
 
 	// Verbatim text
 	blockquote
 		margin-top 1em
 		padding 0.5em 1em
 		background rgba(0,0,0,0.1)
-		color gray
+		color rgba(0,0,0,0.5)
 	blockquote:first-child
 		margin-top 0
 	code
