--- a/components/Image.pug
+++ b/components/Image.pug
@@ -16,3 +16,7 @@ script.
 		style += 'max-height:' + maxH + 'px;'
 
 img(src={res.u} style={style} alt={alt})
+
+style.
+	img
+		background rgba(255,255,255,0.1)
