--- a/styles/reset.styl
+++ b/styles/reset.styl
@@ -1,41 +1,23 @@
-// Box sizing
+// Box sizing, margin, padding
 *
 	box-sizing border-box
-
-// Display
+	margin 0
+	padding 0
 iframe
 img
-	display block
+video
+	box-sizing content-box
 
-// Margin
-body
-blockquote
-figure
-ol
-p
-ul
-	margin 0
-
-// Border
+// Borders
 button
 iframe
 	border 0
-
-// Border collapse
 table
 	border-collapse collapse // removes artificial spacing between cells
 
-// Padding
-button
-figure
-menu
-ol
-td
-ul
-	padding 0
-
 // Font
 button
+input
 	font inherit
 
 // Rendering
