--- a/styles/util.styl
+++ b/styles/util.styl
@@ -12,11 +12,7 @@
 .downvoted
 	color lightsteelblue
 
-// Overflow
-.scroll-tall
-	height 100%
-	overflow auto
-.no-scrollbar
+.hide-scrollbar
 	scrollbar-width none
 	&::-webkit-scrollbar
 		display none
