--- a/components/CommentTree.pug
+++ b/components/CommentTree.pug
@@ -7,47 +7,59 @@ script.
 	isCompressed = comment instanceof CompressedCommentsModel
 	voteSyncDelta = if votes[comment.id]? then votes[comment.id] - comment.myVote else 0
 	scoreText = switch
-		when isDeeper then 'X'
-		when isCompressed then 'X'
+		when comment.isPinned then 'Pinned'
 		when comment.isDeleted then 'X'
+		when isCompressed or isDeeper then '?'
 		when isFinite(comment.score) then comment.score + voteSyncDelta
-		else 'n/a'
+		else '?'
+	if Number.isFinite(comment.score)
+		scoreSign = Math.sign(comment.score)
+		scoreDigitCount = Math.ceil(Math.log10(Math.abs(comment.score) + 1))
+		scoreDigitCountArray = new Array(scoreDigitCount)
 
 .comment-tree
-	article.comment.votable(data-id={comment.id} class:upvoted={comment.myVote === 1 || votes[comment.id] === 1} class:downvoted={comment.myVote === -1 || votes[comment.id] === -1})
-		.score {scoreText}
+	article(role='comment')
 		.text
 			{#if isDeeper}
-				span.deeper-message Continue this thread...
+				span.deeper-message Deeper
 			{:else if isCompressed}
-				span.compressed-message {comment.count === 1 ? '1 reply...' : comment.count + ' replies...'}
+				span.compressed-message More comments
 			{:else if comment.isDeleted}
-				span.deleted-message (deleted)
+				span.deleted-message Deleted
 			{:else}
 				{@html comment.content}
+		.meta(style='height: 1em')
+			{#if Number.isFinite(comment.score)}
+				data.votable(value={comment.score} title='score: {comment.score}' data-id={comment.id})
+					{#each (new Array(scoreDigitCount)) as index}
+						{#if scoreSign > 0}
+							<svg width='100' height='120' viewBox='-50 -30 200 180' style='width: 1em; height: 1em'>
+								<polygon points='50,10 95,70 60,70 60,120 40,120 40,70 5,70' stroke='black' stroke-width='50' stroke-linejoin='round' />
+								<polygon points='50,10 95,70 60,70 60,120 40,120 40,70 5,70' stroke='lightsalmon' stroke-width='25' stroke-linejoin='round' fill='lightsalmon' />
+							</svg>
+						{:else if scoreSign < 0}
+							<svg width='100' height='120' viewBox='-50 -30 200 180' style='width: 1em; height: 1em'>
+								<polygon points='50,110 5,50 40,50 40,0 60,0 60,50 95,50' stroke='black' stroke-width='50' stroke-linejoin='round' />
+								<polygon points='50,110 5,50 40,50 40,0 60,0 60,50 95,50' stroke='lightblue' stroke-width='25' stroke-linejoin='round' fill='lightblue' />
+							</svg>
+					{:else}
+						span -
 	{#if !isDeeper && !isCompressed && comment.replies.length}
 		.replies
 			{#each comment.replies as reply}
 				svelte:self(comment={reply} votes={votes})
 
-
 style.
 	.comment-tree
-		margin 2em 0
-	.comment
-		display grid
-		grid-template-columns 4.8em 1fr
-	.score
-		opacity 0.5
-		text-align right
-		padding-right 1.2em
-	.text
-		width 30em
+		margin-top 1em
+		border-left 1px solid rgba(255,255,255,0.25)
+	[role=comment]
+		position relative
+		width 33rem
+		padding-left 2rem
 	.deeper-message
 	.compressed-message
 	.deleted-message
 		opacity 0.5
 	.replies
-		margin-left 4px
-		border-left 2px solid rgba(0,0,0,0.1)
-		padding-left 3em
+		padding-left 1em
