--- a/core/views/templates/Flair.pug
+++ b/core/views/templates/Flair.pug
@@ -3,8 +3,8 @@ script.
 	export subredditName = ''
 	emojis = {}
 	html = flair.text
-	if browserState['emojis@' + subredditName]
-		for emoji in browserState['emojis@' + subredditName].split(',')
+	if machineState['emojis@' + subredditName]
+		for emoji in machineState['emojis@' + subredditName].split(',')
 			[code, id] = emoji.split(':')
 			emojis[code] = id
 		html =
